# lemon

./: .gitattributes  .gitignore  Cargo.toml  assign  base.md  extern  if  lemon  loop  main  math  owner  readme.md  rust-toolchain.toml  rustfmt.toml  setup.sh  stress  struct  write
.github/workflows/: release.yml
.zed/: settings.json
bench/: assign.ln  extern.ln  gen.ln  guess_the_number.ln  if.ln  loop.ln  main.ln  math.ln  mod.ln  mod.lnr  owner.ln  prim.ln  stress.ln  struct.ln  struct.lnr  write.ln
bench/math/: main.ln  min.ln
bench/snippets/: code.ln  code.lnr  fibonacci.lemon  if.lemon  loops.lemon
docs/src/: GUIDE.md  README.md
play/: test.ln
src/: ast.rs  cli.rs  compiler.rs  cross.rs  diag.rs  file_system.rs  lexer.rs  lib.rs  linker.rs  loader.rs  main.rs  message.rs  parser.rs  range.rs  report.rs  source.rs  time.rs  tokens.rs  utils.rs
src/anf/: mod.rs
src/ast/: ast_type.rs  mod.rs  tree_type.rs  visitor.rs
src/builder/: build_assign_expr.rs  build_associate_expr.rs  build_binary_expr.rs  build_block_stmt.rs  build_borrow_expr.rs  build_call_expr.rs  build_deref_expr.rs  build_expr.rs  build_extern_fn_stmt.rs  build_fn_stmt.rs  build_ident_expr.rs  build_if_expr.rs  build_if_stmt.rs  build_impl_stmt.rs  build_let_stmt.rs  build_literal.rs  build_member_expr.rs  build_ret_stmt.rs  build_struct_def_stmt.rs  build_struct_init_expr.rs  build_type.rs  build_type_def_stmt.rs  build_utils.rs  mod.rs
src/checker/: check_assign_expr.rs  check_associate_expr.rs  check_binary.rs  check_binary_expr.rs  check_block_stmt.rs  check_borrow.rs  check_borrow_expr.rs  check_call.rs  check_call_expr.rs  check_const_del_stmt.rs  check_const_fn_stmt.rs  check_const_stmt.rs  check_deref_expr.rs  check_expr.rs  check_extern_fn_stmt.rs  check_fn.rs  check_fn_stmt.rs  check_for_stmt.rs  check_ident_expr.rs  check_if.rs  check_if_expr.rs  check_if_stmt.rs  check_impl_stmt.rs  check_import_expr.rs  check_let_stmt.rs  check_literal.rs  check_member_expr.rs  check_number.rs  check_pipe.rs  check_primitive_type.rs  check_ref_expr.rs  check_ret_stmt.rs  check_return_expr.rs  check_stmt.rs  check_struct_init_expr.rs  check_type.rs  check_type_def_stmt.rs  check_while_stmt.rs  equal_type.rs  event.rs  (+4 more)
src/compiler/: mod.rs
src/comptime/: engine.rs  frame.rs  mod.rs  stack.rs
src/cross_compiler/: mod.rs
src/diagnostics/: diag.rs  diag_error.rs  diag_warning.rs  mod.rs  report.rs
src/disassembler/: block.rs  function.rs  instr.rs  ir_struct.rs  mod.rs  value.rs
src/evaluator/: ctx.rs  errors.rs  eval.rs  formatting.rs  mod.rs  stack.rs  std.rs  value.rs
src/formatter/: mod.rs
src/ir/: builder.rs  disassembler.rs  display_ir.rs  ir.rs  mod.rs  show.rs  value.rs
src/lexer/: lex.rs  lexer.rs  mod.rs  token.rs
src/linker/: mod.rs
src/llvm/: allocate_struct.rs  calculate_struct_size.rs  compile_block.rs  compile_call.rs  compile_comparison.rs  compile_fn_ir.rs  compile_import.rs  compile_instr.rs  compile_math.rs  compile_std.rs  fill_struct_values.rs  llvm_block.rs  llvm_call.rs  llvm_cmp.rs  llvm_cmp_utils.rs  llvm_compile_add.rs  llvm_compile_and.rs  llvm_compile_block.rs  llvm_compile_call.rs  llvm_compile_cmp_eq.rs  llvm_compile_cmp_ge.rs  llvm_compile_cmp_gt.rs  llvm_compile_cmp_le.rs  llvm_compile_cmp_lt.rs  llvm_compile_div.rs  llvm_compile_drop.rs  llvm_compile_function.rs  llvm_compile_getptr.rs  llvm_compile_halloc.rs  llvm_compile_instr.rs  llvm_compile_jmp.rs  llvm_compile_jmp_if.rs  llvm_compile_load.rs  llvm_compile_mod.rs  llvm_compile_mul.rs  llvm_compile_or.rs  llvm_compile_ret.rs  llvm_compile_salloc.rs  llvm_compile_set.rs  llvm_compile_shl.rs  (+23 more)
src/loader/: config.rs  mod.rs  mod_id.rs
src/optimize/: mod.rs  ownership.rs  stack_layout.rs
src/parser/: ast.rs  (+4 more)
tests/: snippets_tests.rs
tools/: check  install.sh  release  test
(+136 files in other folders)
