[package]
name = "lemon"
version = "0.1.0"
edition = "2021"
description = "An experimental, general-purpose functional programming language."
authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
repository = "https://github.com/yazaldefilimone/lemon"
license = "Apache-2.0"
exclude = ["benches/**"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
dunh = "1.0.0"
serde = { version = "1.0.204", features = ["derive"] }
logos = "0.15.0"

[profile.release]
lto = "fat"       # Link Time Optimization, "fat" aplica otimizações mais agressivas
opt-level = 3
codegen-units = 1
strip = "symbols" # set to `false` for debug information
debug = false     # set to `true` for debug information
panic = "abort"   # Let it crash and force ourselves to write safe Rust.
# Profile for `cargo coverage`
[profile.coverage]
inherits = "release"
lto = "thin"            # Faster compile time with thin lto
debug-assertions = true # Make sure `debug_assert!`s pass
