[package]
name = "lemonlang"
version = "0.0.3"
edition = "2021"
description = "an experimental, modern, purely safe, programming language."
authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
repository = "https://github.com/yazaldefilimone/lemon"
license = "Apache-2.0"
exclude = ["benches/**"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
logos = "0.15.0"
codelighter = "1.0.2"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
which = "7.0.1"
target-lexicon = "0.13.1"
console = "0.15.10"
rustc-hash = "2.1.0"


[dev-dependencies]
insta = "1.41.1"
stdext = "0.3.3"
walkdir = "2.5.0"

[[bin]]
name = "lemon"
path = "src/main.rs"

[toolchain]
channel = "nightly"

[profile.release]
lto = "fat"       # Link Time Optimization, "fat" aplica otimizações mais agressivas
opt-level = 3
codegen-units = 1
strip = "symbols" # set to `false` for debug information
debug = false     # set to `true` for debug information
panic = "abort"   # Let it crash and force ourselves to write safe Rust.
# Profile for `cargo coverage`
[profile.coverage]
inherits = "release"
lto = "thin"            # Faster compile time with thin lto
debug-assertions = true # Make sure `debug_assert!`s pass
opt-level = "z"         # minify
strip = true
