[package]
name = "lemonc"
version = "0.0.4"
edition = "2021"
description = "an experimental, modern, purely safe, programming language."
authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
repository = "https://github.com/yazaldefilimone/lemon"
license = "Apache-2.0"
exclude = ["benches/**"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
logos = "0.15.0"
codelighter = "1.0.2"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
which = "7.0.1"
target-lexicon = "0.13.1"
console = "0.15.10"
rustc-hash = "2.1.0"
toml = "0.8.20"
dirs = "6.0.0"
rust_decimal = "1.37.1"


[dev-dependencies]
insta = "1.41.1"
stdext = "0.3.3"
walkdir = "2.5.0"


[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # Set to `false` for debug information
debug = false     # Set to `true` for debug information
panic = "abort"   # Let it crash and force ourselves to write safe Rust

# Profile for `cargo coverage`
[profile.coverage]
inherits = "release"
opt-level = 2           # Compile faster
codegen-units = 256     # Compile faster
lto = "thin"            # Faster compile time with thin LTO
debug-assertions = true # Make sure `debug_assert!`s pass
overflow-checks = true  # Catch arithmetic overflow errors
